[gd_scene load_steps=2 format=3 uid="uid://bhwntp5nnpw16"]

[ext_resource type="Script" path="res://scripts/password_puzzle_letter.gd" id="1_jxlkj"]

[node name="PasswordPuzzleLetter" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_jxlkj")

[node name="UpBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "^"

[node name="Letter" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "A"
horizontal_alignment = 1

[node name="DownBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "v"

[connection signal="pressed" from="UpBtn" to="." method="_on_up_btn_pressed"]
[connection signal="pressed" from="DownBtn" to="." method="_on_down_btn_pressed"]
